# pytorch_cmspepr

./: CMakeLists.txt  README.md  setup.py
cmake/: TorchCMSPeprConfig.cmake.in
csrc/: accumulate_knn.cpp  accumulate_knn_grad.cpp  cmspepr.h  helpers.h  select_knn.cpp  select_knn_grad.cpp  version.cpp
csrc/cpu/: accumulate_knn_cpu.cpp  accumulate_knn_cpu.h  accumulate_knn_grad_cpu.cpp  accumulate_knn_grad_cpu.h  select_knn_cpu.cpp  select_knn_cpu.h
csrc/cuda/: accumulate_knn_cuda.cu  accumulate_knn_cuda.h  accumulate_knn_grad_cuda.cu  accumulate_knn_grad_cuda.h  cuda_helpers.h  select_knn_cuda.cu  select_knn_cuda.h  select_knn_grad_cuda.cu  select_knn_grad_cuda.h  utils.cuh
extensions/: oc_cpu.cpp  select_knn_cpu.cpp  select_knn_cuda.cpp  select_knn_cuda_kernel.cu
scripts/: performance.py  performance_oc.py
tests/: test_dataset.py  test_extensions.py  test_gravnet_model.py  test_knn.py  test_objectcondensation.py  test_oc.py
torch_cmspepr/: __init__.py  dataset.py  gravnet_conv.py  gravnet_model.py  logger.py  objectcondensation.py  oc.py  select_knn.py  temp_acc_knn.py  temp_select_knn.py
